# dfz-short-url

./: .gitignore  .zpt_rc  LICENSE  Makefile.am  configure.ac  make_deb  version_bump
debian/: changelog  control
docs/: howto.apib
etc/: Makefile.am
etc/logrotate.d/: dfz-short-url
etc/nginx/sites-available/: dfz-short-url.conf
etc/zapata/backend-available/: dfz-short-url.conf
etc/zapata/conf.d/dfz-short-url/: api.conf  mongodb.conf  redis.conf
etc/zapata/conf.d/dfz/short-url/: dbms.conf
include/: Makefile.am  add_to_am_from_container.mk
include/dfz/: short-url.h
include/dfz/short-url/: config.h  short-url.h
include/dfz/short-url/container/collections/: urls.h
include/dfz/short-url/container/datums/: Urls.h
include/dfz/short-url/container/mutations/: Urls.h
src/: Makefile.am
src/api/: Makefile.am  short-url.cpp  short-url.lambda.cpp  short-url.oo.cpp
src/container/: Makefile.am  README.md  api.cpp
src/container/collections/: urls.cpp
src/container/datums/: Urls.cpp  Urls.sh  Urls.sql
src/container/mutations/: Urls.cpp
src/dfz/short-url/models/: container.json
src/mutations/: Makefile.am  api.cpp
