
nobase_dist_sysconf_DATA = \
./logrotate.d/dfz-short-url \
./nginx/sites-available/dfz-short-url.conf \
./zapata/backend-available/dfz-short-url.conf \
./zapata/conf.d/dfz-short-url/api.conf \
./zapata/conf.d/dfz-short-url/files.conf \
./zapata/conf.d/dfz-short-url/redis.conf \
./zapata/conf.d/dfz-short-url/mongodb.conf
